<!--
  ~ MIT License
  ~ Copyright (c) 2020 Curt Binder
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
  ~ documentation files (the "Software"), to deal in the Software without restriction, including without limitation
  ~ the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software
  ~ and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial portions
  ~ of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
  ~ INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
  ~ PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
  ~ LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT
  ~ OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
  ~ OTHER DEALINGS IN THE SOFTWARE.
  ~
  -->

<resources>
    <string name="app_name">Poop \"Log\"-ger</string>
    <string name="db_authority">info.curtbinder.pooptime.provider</string>
    <string name="app_copyright">Copyright &#169; 2020</string>
    <string name="app_author">Curt Binder</string>
    <string name="app_license">MIT License</string>
    <string name="poop_label">Pooped?</string>
    <string name="now">Now</string>
    <string name="other">Other</string>
    <string name="type_normal">Normal</string>
    <string name="type_hard">Hard</string>
    <string name="type_loose">Loose</string>
    <string name="notes">Notes</string>
    <string name="quick_summary">Quick Summary:</string>
    <string name="days_since_label">Days Since Last Poop:</string>
    <string name="last_poop_label">Last Poop:</string>
    <string name="no_poop">No poop\'s logged</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="calendar">Calendar</string>
    <string name="never">Never</string>
    <string name="edit_poop_title">Edit Poop</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="date_label">Date:</string>
    <string name="time_label">Time:</string>
    <string name="info">This app is designed to help those people who have difficulty pooping.\n\n
It\'s quick and simple to track when you poop. You can easily view your poop history.
From the Main page, you can log a poop "Now" or from another time (\"Other\").
You can classify the type of poop and make a note about your poop.\n\n
You can choose "History" or "Calendar" from the options menu to view the respective page.\n\n
History - Shows a list of all the poops. If you long-press on the poop, you can edit or delete it.\n\n
Calendar - Shows a calendar of all the poops. A brown highlighted day indicates a poop was on that day.\n\n
A Circle highlighted day is the current day and it\'s brown if there\'s a poop on the day.\n\n
Export... - Exports all the poops to a CSV file.\n\n
Import... - Imports the poops contained in a CSV file. This will only add the poops from the file
if they are not already logged. If they already exist, they are simply skipped.\n\n
All data is stored in the app and no data is ever transmitted from your device.\n
This app requires no special permissions and does not use the internet for anything.
    </string>
    <string name="export_db">Export…</string>
    <string name="import_db">Import…</string>
    <string name="exported_poops">Exported all poops</string>
    <string name="imported_poops">Imported %1$d poops</string>
</resources>
