<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~ Copyright (c) 2020 Curt Binder
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
  ~ documentation files (the "Software"), to deal in the Software without restriction, including without limitation
  ~ the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software
  ~ and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial portions
  ~ of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
  ~ INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
  ~ PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
  ~ LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT
  ~ OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
  ~ OTHER DEALINGS IN THE SOFTWARE.
  ~
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_action_book"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"
        android:title="@string/history" />
    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/ic_action_calendar_month_white"
        app:showAsAction="ifRoom"
        android:orderInCategory="110"
        android:title="@string/calendar" />
    <item
        android:id="@+id/action_export"
        app:showAsAction="never"
        android:orderInCategory="300"
        android:title="@string/export_db" />
    <item
        android:id="@+id/action_import"
        app:showAsAction="never"
        android:orderInCategory="350"
        android:title="@string/import_db" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="999"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>